--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -23,8 +23,29 @@
   </div>
   <div class="field">
     <%= f.label :kind_id %><br>
-	<%= collection_select(:contact, :kind_id,@kind_options_for_select, :id, :description) %>
+	<%= collection_select(:contact, :kind_id, @kind_options_for_select, :id, :description) %>
   </div>
+
+	<%= f.fields_for :adress do |adress_fields| %>
+		<div class="field">
+			<%= f.label :street %><br>
+			<%= adress_fields.text_field :street %>
+		</div>
+		<div class="field">
+			<%= f.label :city %><br>
+			<%= adress_fields.text_field :city %>
+		</div>
+		<div class="field">
+			<%= f.label :state %><br>
+			<%= adress_fields.text_field :state %>
+		</div>
+  <% end %>
+
+  <div class="field">
+    <%= f.label :email %><br>
+    <%= f.text_field :email %>
+  </div>
+
   <div class="field">
     <%= f.label :rmk %><br>
     <%= f.text_area :rmk %>
