Trauzindo o formulário de contato e limpando arquivos de testes

--- a/app/views/contacts/_form.html.erb
+++ b/app/views/contacts/_form.html.erb
@@ -11,7 +11,7 @@
     </div>
   <% end %>
 
-  <h1>Contacts</h1>
+  <h1><%= t('titles.contacts') %></h1>
 
   <div class="field">
     <%= f.label :name %><br>
