--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -1,9 +1,9 @@
+<div class="basic-grey">
 <h1>Seja Bem Vindo</h1>
-
-<ul>
-	<li><%= link_to "Tipos", kinds_path %></li>
-	<li><%= link_to "Contatos", contacts_path %></a></li>
-	<li><%= link_to "Endereços",adresses_path %></li>
-	<li><%= link_to "Telefones",phones_path %></li>
-
-</ul>
+	<ul>
+	  <li><%= link_to "Tipos", kinds_path %></li>
+		<li><%= link_to "Contatos", contacts_path %></a></li>
+		<li><%= link_to "Endereços",adresses_path %></li>
+		<li><%= link_to "Telefones",phones_path %></li>
+	</ul>
+</div>
