Adicionando validação no fomuários dos contatos

--- a/app/views/contacts/index.html.erb
+++ b/app/views/contacts/index.html.erb
@@ -26,6 +26,9 @@
   </table>
 
   <br>
-
+  <br>
+  <%= paginate @contacts %>
+ <br> <br>
   <%= link_to t('buttons.new'), new_contact_path %>
+ 
 </div>
