--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -3,7 +3,8 @@
 	<ul>
 	  <li><%= link_to "Tipos", kinds_path %></li>
 		<li><%= link_to "Contatos", contacts_path %></a></li>
-		<li><%= link_to "Endereços",adresses_path %></li>
-		<li><%= link_to "Telefones",phones_path %></li>
+		<li><%= link_to "Endereços", adresses_path %></li>
+		<li><%= link_to "Telefones", phones_path %></li>
+		<li><%= link_to "Telefones Ajax", phones_path, remote: true %></li>
 	</ul>
 </div>
