--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,12 +2,15 @@
 <html>
 <head>
   <title>Notebook</title>
-  <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
-  <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
+  <%= stylesheet_link_tag    'application' %>
+  <%= stylesheet_link_tag    params[:controler] %>
+  <%= javascript_include_tag 'application' %>
+  <%= javascript_include_tag 'notifyjs/notify' %>
+  <%= javascript_include_tag  params[:controler] %>
   <%= csrf_meta_tags %>
 </head>
 <body>
-
+  
 <%= yield %>
 
 </body>
